Fix portfolio page on mobile

--- a/assets/css/portfolioCustom.css
+++ b/assets/css/portfolioCustom.css
@@ -62,7 +62,3 @@ html {
 	-ms-transition:		max-height 1s ease;
 	transition:			max-height 1s ease;
 }
-
-.submenu {
-	display: none;
-}
